<resources>
    <string name="time_left">Time Left</string>
    <string name="correct">Correct</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="app_name">Crunch</string>
    <string name="to">To</string>
    <string name="x">XX</string>
    <string name="start">Start</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_crunch">CrunchActivity</string>
    <string name="range">Range</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_score">Score</string>
</resources>
