<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:onClick="incrementLeft"
                android:src="@android:drawable/arrow_up_float" />


            <TextView
                android:id="@+id/leftTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/range" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:onClick="decrementLeft"
                android:src="@android:drawable/arrow_down_float" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:onClick="incrementRight"
                android:src="@android:drawable/arrow_up_float" />

            <TextView
                android:id="@+id/rightTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/range" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:onClick="decrementRight"
                android:src="@android:drawable/arrow_down_float" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startCrunch"
            android:text="@string/start" />


    </LinearLayout>
</LinearLayout>
